# CPP_Mastring

./: README.md
RandomQuoteGenerator/: CMakeLists.txt  Makefile  main.cpp  run.bat  users.txt
RandomQuoteGenerator/BackUpDB/: backup.txt
RandomQuoteGenerator/Command/: CMakeLists.txt  Command.hpp  Invoker.cpp  Invoker.hpp  PatternDescription.txt  QuoteDB_Handler.cpp  QuoteDB_Handler.hpp  Receiver.cpp  Receiver.hpp
RandomQuoteGenerator/EncryptedUsersDB/: encryptedUsers.txt
RandomQuoteGenerator/Observer/: BackupManager.cpp  BackupManager.hpp  CMakeLists.txt  ConcreteSubject.cpp  ConcreteSubject.hpp  Observer.hpp  Subject.cpp  Subject.hpp
RandomQuoteGenerator/Program/: CMakeLists.txt  Program.cpp  Program.hpp
RandomQuoteGenerator/QuotesDB/: quotes.txt
RandomQuoteGenerator/Singleton/: CMakeLists.txt  quoteDB.cpp  quoteDB.hpp
RandomQuoteGenerator/Threads/: CMakeLists.txt  QuoteReceiver.cpp  QuoteReceiver.hpp  QuoteSender.cpp  QuoteSender.hpp  SharedQuotes.cpp  SharedQuotes.hpp
RandomQuoteGenerator/UserAuthorization/: CMakeLists.txt  UserAuth.cpp  UserAuth.hpp
